--- a/book2.html
+++ b/book2.html
@@ -19,6 +19,7 @@
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
       </summary>
+      <a href="index.html">Go back to Home Page</a>
     </body>
   </main>
 </html>
