--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background="https://media.istockphoto.com/id/1019217092/photo/abstract-blurred-public-library-interior-space-blurry-room-with-bookshelves-by-defocused.webp?b=1&s=170667a&w=0&k=20&c=3lrfUh4G7i13Lrj5VUvzGZ9SvcLOLh4xW6IBgwxJyMU="
     >
       <section class="head">
-        <header><h1>Stevens Book House</h1></header>
+        <header><h1>Steven's Book House</h1></header>
         <!-- Welcome banner -->
         <div class="text">
           <h2>Welcome Book lover</h2>
