--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <a name="top"></a>
   <main>
+    <!-- Apply library image to background -->
     <body
       background="https://media.istockphoto.com/id/1019217092/photo/abstract-blurred-public-library-interior-space-blurry-room-with-bookshelves-by-defocused.webp?b=1&s=170667a&w=0&k=20&c=3lrfUh4G7i13Lrj5VUvzGZ9SvcLOLh4xW6IBgwxJyMU="
     >
