Added target = _blank so book summary links open in new tab

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             alt="I, Robot Book Cover"
             title="I, Robot by Isaac Asimov"
           />
-          <a href="book1.html">I, Robot</a>
+          <a href="book1.html" target="_blank">I, Robot</a>
         </div>
         <!-- Book 2 -->
         <div class="book-2">
@@ -37,7 +37,7 @@
             alt="The Colour of Magic Book Cover"
             title="The Colour of Magic by Terry Pratchett"
           />
-          <a href="book2.html">The Colour of Magic</a>
+          <a href="book2.html" target="_blank">The Colour of Magic</a>
         </div>
         <!-- Book 3 -->
         <div class="book-3">
@@ -46,7 +46,7 @@
             alt="American Gods Book Cover"
             title="American Gods by Neil Gaiman"
           />
-          <a href="book3.html">American Gods</a>
+          <a href="book3.html" target="_blank">American Gods</a>
         </div>
         <!-- Book 4 -->
         <div class="book-4">
@@ -55,7 +55,7 @@
             alt="The Fellowship of the Ring Book Cover"
             title="The Fellowship of the Ring by J.R.R. Tolkien"
           />
-          <a href="book4.html">The Fellowship of the Ring</a>
+          <a href="book4.html" target="_blank">The Fellowship of the Ring</a>
         </div>
         <!-- Book 5 -->
         <div class="book-5">
@@ -64,7 +64,7 @@
             alt="Harry Potter and the Goblet of Fire"
             title="Harry Potter and the Goblet of Fire by J.K. Rowling"
           />
-          <a href="book5.html">Harry Potter and the Goblet of Fire</a>
+          <a href="book5.html" target="_blank">Harry Potter and the Goblet of Fire</a>
         </div>
       </div>
     </body>
