modified feedback form to open in new tab

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <footer>
       <a
         href="https://docs.google.com/forms/d/e/1FAIpQLSdkXuLuBL7gSCzxcylRKR1fip3tOJ6gMMhkS7P8rkx9_7eJyA/viewform?usp=sf_link"
-        >Feedback Form</a
+        target="_blank">Feedback Form</a
       >
       <div class="breaker"></div>
       <a href="#top">Jump to the top</a>
